# ok-bd2

./: .gitattributes  .gitignore  .update_repo_gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  deploy.txt  main_debug.py  pyappify.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  run_tests.ps1
.github/workflows/: build.yml  test.yml
assets/: README.md
assets/map_trade/: calendar_sources.json  price_calendar.v1.json
docs/: architecture.md  pyappify-release-flow.md  release-checklist.md  release-setup-guide.zh-CN.md
offline-train/human-language-tasks/: 1_自动登录.txt  2_公会，小屋，酒馆.txt  3_白嫖抽抽乐.txt  自动登录.txt
offline-train/nature-language-tasks/: 01_自动登录游戏.md  02_日常任务.md  03_BD2短按键测试.md  03_快速狩猎.md  04_BD2鼠标单击测试.md  05_BD2长按键测试.md  05_BD2鼠标滚轮测试.md  09_连接游戏.md  (+7 more)
ok_templates/: README.md
scripts/: check_dependency_exports.ps1  prepare_pyappify_launcher.ps1  prepare_release_notes.ps1  refresh_dependencies.ps1  restore_pyappify_launcher.ps1  select_pyappify_profile.ps1
src/: Labels.py  __init__.py  config.py  game_path.py  globals.py  process_feature.py
tests/: test_auto_login_sequence.py  test_bargain_level_task.py  test_bd2_input_test.py  test_build_workflow.py  test_daily_batch_task.py  test_daily_task.py  test_dependency_management.py  test_free_gacha_task.py  test_game_path.py  test_green_mask.py  test_log_folder.py  test_map_trade.py  test_project_structure.py  test_pvp_task.py  test_quick_suppression_task.py  test_recognition_utils.py  test_responsive_task_config_ui.py  test_square_goddess_task.py  test_template_resolution.py
(+42 files in other folders)
