[project]
name = "ok-bd2"
version = "0.1.1"
description = "An image-recognition-based automation tool for BD2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.8.0",
    "comtypes>=1.4.16",
    "ok-script==1.0.170",
    "numpy>=2.4.0",
    "onnxocr-ppocrv5>=0.0.18",
    "opencc>=1.2.0",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.1.0",
    "pillow>=12.0.0",
    "psutil>=7.2.2",
    "pydirectinput>=1.0.4",
    "pynput>=1.8.1",
    "pyappify==1.0.6",
    "pyside6==6.9.1",
    "pyside6-fluent-widgets",
    "pywin32>=306; platform_system == 'Windows'",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
